use screenshots instead of banners

--- a/layouts/Env.html
+++ b/layouts/Env.html
@@ -6,7 +6,7 @@
     <h2>Broken. Very broken. But try it anyway!</h2>
     
     <ul class="market" data-src="app.repo">
-      <li data-url="{{value.binaries.0.filename}}" style="background-image: url({{value.banner}})" click-call="play">
+      <li data-url="{{value.binaries.0.filename}}" style="background-image: url({{value.screenshots.0.filename}})" click-call="play">
 	<span class="gameName" data-name="{{value.title}}"></span>
 	<span class="authorName" data-author="{{value.author}}"></span>
       </li>
