--- a/res/style.css
+++ b/res/style.css
@@ -20,6 +20,7 @@ html, body {
     background-position: center;
     background-size: 256px 128px;
     -ms-interpolation-mode: nearest-neighbor;
+	image-rendering: -moz-crisp-edges;
     image-rendering: pixelated;
 }
 
@@ -211,6 +212,7 @@ nav button {
     height: 18%;
     left: 20%;
     width: 58%;
+	image-rendering: -moz-crisp-edges;
     image-rendering: pixelated;
 }
 
