--- a/layouts/Sim.html
+++ b/layouts/Sim.html
@@ -6,12 +6,12 @@
   <led data-inject="LED" style="background-color: #0F0" pin-on="cpu.11"></led>
   <led data-inject="LED" style="background-color: #00F" pin-on="cpu.9"></led>
   
-  <btn data-inject="BTN" id="Up" active="low" pin-on="cpu.A0"></btn>
-  <btn data-inject="BTN" id="Down" active="low" pin-on="cpu.A3"></btn>
-  <btn data-inject="BTN" id="Left" active="low" pin-on="cpu.A2"></btn>
-  <btn data-inject="BTN" id="Right" active="low" pin-on="cpu.A1"></btn>
-  <btn data-inject="BTN" id="A" active="low" pin-on="cpu.7"></btn>
-  <btn data-inject="BTN" id="B" active="low" pin-on="cpu.8"></btn>
+  <btn data-inject="BTN" id="Up" active="low" pin-on="cpu.A0" bind-key="ArrowUp"></btn>
+  <btn data-inject="BTN" id="Down" active="low" pin-on="cpu.A3" bind-key="ArrowDown"></btn>
+  <btn data-inject="BTN" id="Left" active="low" pin-on="cpu.A2" bind-key="ArrowLeft"></btn>
+  <btn data-inject="BTN" id="Right" active="low" pin-on="cpu.A1" bind-key="ArrowRight"></btn>
+  <btn data-inject="BTN" id="A" active="low" pin-on="cpu.7" bind-key="KeyZ,KeyA,ControlLeft"></btn>
+  <btn data-inject="BTN" id="B" active="low" pin-on="cpu.8" bind-key="KeyB,KeyS,KeyX,AltLeft,AltRight"></btn>
 
   <btn click-call="powerOff" id="PWR"></btn>
 </div>
