--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ html, body {
     background-position: center;
     background-size: 256px 128px;
     -ms-interpolation-mode: nearest-neighbor;
+	image-rendering: -moz-crisp-edges;
     image-rendering: pixelated;
 }
 
@@ -211,7 +212,38 @@ nav button {
     height: 18%;
     left: 20%;
     width: 58%;
+    image-rendering: -moz-crisp-edges;
     image-rendering: pixelated;
+}
+
+canvas:fullscreen{
+  width: 100% !important;
+  left: initial !important;
+  top: initial !important;
+  bottom: initial !important;
+  height: initial !important;
+  object-fit: contain !important;
+  background-color: black !important;
+}
+
+canvas:-moz-full-screen{
+  width: 100% !important;
+  left: initial !important;
+  top: initial !important;
+  bottom: initial !important;
+  height: initial !important;
+  object-fit: contain !important;
+  background-color: black !important;
+}
+
+canvas:-webkit-full-screen {
+  width: 100% !important;
+  left: initial !important;
+  top: initial !important;
+  bottom: initial !important;
+  height: initial !important;
+  object-fit: contain !important;
+  background-color: black !important;
 }
 
 #simContainer led {
