--- a/res/style.css
+++ b/res/style.css
@@ -212,8 +212,38 @@ nav button {
     height: 18%;
     left: 20%;
     width: 58%;
-	image-rendering: -moz-crisp-edges;
+    image-rendering: -moz-crisp-edges;
     image-rendering: pixelated;
+}
+
+canvas:fullscreen{
+  width: 100% !important;
+  left: initial !important;
+  top: initial !important;
+  bottom: initial !important;
+  height: initial !important;
+  object-fit: contain !important;
+  background-color: black !important;
+}
+
+canvas:-moz-full-screen{
+  width: 100% !important;
+  left: initial !important;
+  top: initial !important;
+  bottom: initial !important;
+  height: initial !important;
+  object-fit: contain !important;
+  background-color: black !important;
+}
+
+canvas:-webkit-full-screen {
+  width: 100% !important;
+  left: initial !important;
+  top: initial !important;
+  bottom: initial !important;
+  height: initial !important;
+  object-fit: contain !important;
+  background-color: black !important;
 }
 
 #simContainer led {
