drag-and-drop hex support.

--- a/res/layouts/Env.html
+++ b/res/layouts/Env.html
@@ -1,4 +1,7 @@
-<div id="envContainer" class="verticalContainer">
+<div id="envContainer" class="verticalContainer"
+	ondragenter="event.stopPropagation(); event.preventDefault();"
+	ondragover="event.stopPropagation(); event.preventDefault();"
+	drop-call="onDropFile">
 
   <div>
     
