clickable source link in game list

--- a/res/layouts/Env.html
+++ b/res/layouts/Env.html
@@ -11,7 +11,7 @@
     <ul class="market" data-src="app.repo">
       <li data-url="{{value.binaries.0.filename}}" style="background-image: url({{value.screenshots.0.filename}})" click-call="play">
 	<span class="gameName" data-name="{{value.title}}"></span>
-	<span class="authorName" data-author="{{value.author}}"></span>
+	<a href="{{value.sourceUrl}}" class="authorName" data-author="{{value.author}}"></a>
       </li>
     </ul>
   </div>
