--- a/layouts/Env.html
+++ b/layouts/Env.html
@@ -5,13 +5,13 @@
 
   <div>
     
-    <h1>ProjectABE - 0.0.3 PREVIEW</h1>
+    <h1>ProjectABE - 0.1.3 PREVIEW</h1>
     <h2>Broken. Very broken. But try it anyway!</h2>
     
     <ul class="market" data-src="app.repo">
       <li data-url="{{value.binaries.0.filename}}" style="background-image: url({{value.screenshots.0.filename}})" click-call="play">
 	<span class="gameName" data-name="{{value.title}}"></span>
-	<span class="authorName" data-author="{{value.author}}"></span>
+	<a href="{{value.sourceUrl}}" class="authorName" data-author="{{value.author}}"></a>
       </li>
     </ul>
   </div>
