Color changes whenever cache is discarded

--- a/res/style.css
+++ b/res/style.css
@@ -266,18 +266,19 @@ canvas:-webkit-full-screen {
 #simContainer btn {
     position: absolute;
     cursor: pointer;
+    --background: rgba(255,255,255,0.5);
 }
 
 #simContainer #Up {
-  top: 48%;
-  left: 20%;
+  top: 49%;
+  left: 16%;
   width: 14%;
   height: 10%;
 }
 
 #simContainer #Left {
   top: 57%;
-  left: 6%;
+  left: 2%;
   width: 15%;
   height: 9%;
 }
@@ -285,44 +286,46 @@ canvas:-webkit-full-screen {
 
 #simContainer #Down {
   top: 65%;
-  left: 20%;
+  left: 16%;
   width: 14%;
   height: 10%;
 }
 
 #simContainer #Right {
-  top: 57%;
-  left: 33%;
+  top: 58%;
+  left: 28%;
   width: 15%;
   height: 9%;
 }
 
 #simContainer #A {
-    top: 62%;
-    left: 60%;
+    top: 59%;
+    left: 64%;
     width: 14%;
-    height: 8%;    
+    height: 8%;
+    border-radius: 50%;
 }
 
 #simContainer #B {
-    top: 57%;
-    left: 76%;
+    top: 54%;
+    left: 79%;
     width: 15%;
     height: 9%;
+    border-radius: 50%;
 }
 
 #simContainer #PWR {
     width: 14%;
     height: 7%;
     top: 0;
-    left: 18%;
+    left: 15%;
 }
 
 #DBG {
-    width: 15%;
+    width: 21%;
     height: 10%;
     bottom: 0;
-    left: 42%;
+    left: 41%;
 }
 
 #debuggerContainer {
