--- a/res/layouts/Sim.html
+++ b/res/layouts/Sim.html
@@ -1,5 +1,5 @@
 <div id="simContainer" class="verticalContainer" data-inject="arduboy" poweroff-call="onEndSim">
-  <img src="Arduboy-off.png" />
+  <img src="Arduboy ({{app.color}}).png" />
   <canvas data-inject="SCREEN" id="screen" pin-sck="cpu.15" pin-sda="cpu.16" pin-res="cpu.6" pin-dc="cpu.4">
   </canvas>
   <led data-inject="LED" style="background-color: #F00" pin-on="cpu.10"></led>
