--- a/res/style.css
+++ b/res/style.css
@@ -213,10 +213,10 @@ nav button {
 
 #simContainer canvas {
     position: absolute;
-    top: 11%;
-    height: 18%;
-    left: 20%;
-    width: 58%;
+    top: 8.7%;
+    height: 22.5%;
+    left: 18%;
+    width: 64.5%;
     image-rendering: -moz-crisp-edges;
     image-rendering: pixelated;
 }
@@ -321,6 +321,13 @@ canvas:-webkit-full-screen {
     left: 15%;
 }
 
+#MCM {
+    width: 6%;
+    height: 9%;
+    top: 25%;
+    left: 89%;
+}
+
 #DBG {
     width: 21%;
     height: 10%;
@@ -378,4 +385,76 @@ canvas:-webkit-full-screen {
 
 #debuggerContainer .tabs {
     min-height: 20px;
+}
+
+#simContainer.microcard {}
+
+#simContainer.microcard img {
+    image-rendering: pixelated;
+    image-rendering: -moz-crisp-edges;
+}
+
+#simContainer.microcard #screen {
+    transform: rotate(-90deg);
+    top: 32%;
+    height: 34%;
+    width: 38%;
+    left: 30.5%;
+}
+
+#simContainer.microcard #Left {
+    top: 20%;
+    left: 16%;
+    width: 9%;
+    height: 14%;
+}
+
+#simContainer.microcard #Right {
+    top: 46%;
+    left: 16%;
+    width: 9%;
+    height: 14%;
+}
+
+#simContainer.microcard #Up {
+    top: 31%;
+    width: 10%;
+    left: 7%;
+    height: 16%;
+}
+
+#simContainer.microcard #Down {
+    top: 31%;
+    width: 10%;
+    left: 24%;
+    height: 16%;
+}
+
+#simContainer.microcard #A {
+    top: 38%;
+    width: 9%;
+    left: 72%;
+    height: 15%;
+}
+
+#simContainer.microcard #B {
+    top: 28%;
+    width: 9%;
+    left: 82%;
+    height: 15%;
+}
+
+#simContainer.microcard #PWR {
+    left: 18%;
+    height: 14%;
+}
+
+#simContainer.microcard #MCM {
+    display: none;
+}
+
+#simContainer.microcard #DBG {
+    width: 11%;
+    left: 44%;
+    height: 14%;
 }
