--- a/layouts/Sim.html
+++ b/layouts/Sim.html
@@ -1,5 +1,5 @@
 <div id="simContainer" class="verticalContainer" data-inject="arduboy" poweroff-call="onEndSim">
-  <img src="Arduboy-off.png" />
+  <img src="Arduboy ({{app.color}}).png" />
   <canvas data-inject="SCREEN" id="screen" pin-sck="cpu.15" pin-sda="cpu.16" pin-res="cpu.6" pin-dc="cpu.4">
   </canvas>
   <led data-inject="LED" style="background-color: #F00" pin-on="cpu.10"></led>
@@ -14,6 +14,7 @@
   <btn data-inject="BTN" id="B" active="low" pin-on="cpu.8" bind-key="KeyB,KeyS,KeyX,AltLeft,AltRight"></btn>
 
   <btn click-call="powerOff" id="PWR"></btn>
+  <btn click-toggle="#simContainer@class=microcard;#simContainer img@src=mc.png" click-call="microcardMode" id="MCM"></btn>
   <btn click-toggle="#debuggerContainer@hidden=false" id="DBG"></btn>
 
   <div id="debuggerContainer" class="verticalContainer" data-inject="Debugger">
