--- a/res/layouts/Sim.html
+++ b/res/layouts/Sim.html
@@ -1,30 +1,27 @@
-<div id="simContainer" class="verticalContainer" data-inject="arduboy" poweroff-call="onEndSim">
-  <img src="Arduboy ({{app.color}}).png" />
-  <canvas data-inject="SCREEN" id="screen" pin-sck="cpu.15" pin-sda="cpu.16" pin-res="cpu.6" pin-dc="cpu.4">
-  </canvas>
-  <led data-inject="LED" style="background-color: #F00" pin-on="cpu.10"></led>
-  <led data-inject="LED" style="background-color: #0F0" pin-on="cpu.11"></led>
-  <led data-inject="LED" style="background-color: #00F" pin-on="cpu.9"></led>
+<div id="fb">
   
-  <btn data-inject="BTN" id="Up" active="low" pin-on="cpu.A0" bind-key="ArrowUp"></btn>
-  <btn data-inject="BTN" id="Down" active="low" pin-on="cpu.A3" bind-key="ArrowDown"></btn>
-  <btn data-inject="BTN" id="Left" active="low" pin-on="cpu.A2" bind-key="ArrowLeft"></btn>
-  <btn data-inject="BTN" id="Right" active="low" pin-on="cpu.A1" bind-key="ArrowRight"></btn>
-  <btn data-inject="BTN" id="A" active="low" pin-on="cpu.7" bind-key="KeyZ,KeyA,ControlLeft"></btn>
-  <btn data-inject="BTN" id="B" active="low" pin-on="cpu.8" bind-key="KeyB,KeyS,KeyX,AltLeft,AltRight"></btn>
+  <div id="ideContainer" class="verticalContainer" data-inject="Debugger">
 
-  <btn click-call="powerOff" id="PWR"></btn>
-  <btn click-toggle="#simContainer@class=microcard;#simContainer img@src=mc.png" click-call="microcardMode" id="MCM"></btn>
-  <btn click-toggle="#debuggerContainer@hidden=false" id="DBG"></btn>
-
-  <div id="debuggerContainer" class="verticalContainer" data-inject="Debugger">
-    
     <div class="horizontalContainer tabs">
 
-      <button click-toggle="#debuggerContainer@data-tab=da" click-call="refreshDa">Disassembly</button>
-      <button click-toggle="#debuggerContainer@data-tab=history" click-call="refreshHistory">Log</button>
-      <button click-toggle="#debuggerContainer@data-tab=state" click-call="refreshState">CPU</button>
+      <button click-toggle="#ideContainer@data-tab=source" click-call="initSource">Source</button>
+      <button click-toggle="#ideContainer@data-tab=da" click-call="refreshDa">Disassembly</button>
+      <button click-toggle="#ideContainer@data-tab=history" click-call="refreshHistory">Log</button>
+      <button click-toggle="#ideContainer@data-tab=state" click-call="refreshState">CPU</button>
       
+    </div>
+
+    <div class="verticalContainer" id="sourceContainer">
+      <div class="horizontalContainer tabs">
+	<label>
+	  File:
+	  <select id="currentFile" change-call="changeSourceFile" data-src="app.source">
+	    <option value="{{key}}">{{key}}</option>
+	  </select>
+	</label>
+	<button click-call="compile" id="compile">&#10148;</button>
+      </div>
+      <div id="ace"></div>
     </div>
     
     <div class="verticalContainer" id="historyContainer">
@@ -55,4 +52,29 @@
     </div>
 
   </div>
+  <div id="simBox">
+    
+    <div id="simContainer" class="verticalContainer" data-inject="arduboy" poweroff-call="onEndSim">
+      <img src="Arduboy ({{app.color}}).png" />
+      <canvas data-inject="SCREEN" id="screen" pin-sck="cpu.15" pin-sda="cpu.16" pin-res="cpu.6" pin-dc="cpu.4">
+      </canvas>
+      <led data-inject="LED" style="background-color: #F00" pin-on="cpu.10"></led>
+      <led data-inject="LED" style="background-color: #0F0" pin-on="cpu.11"></led>
+      <led data-inject="LED" style="background-color: #00F" pin-on="cpu.9"></led>
+      
+      <btn data-inject="BTN" id="Up" active="low" pin-on="cpu.A0" bind-key="ArrowUp"></btn>
+      <btn data-inject="BTN" id="Down" active="low" pin-on="cpu.A3" bind-key="ArrowDown"></btn>
+      <btn data-inject="BTN" id="Left" active="low" pin-on="cpu.A2" bind-key="ArrowLeft"></btn>
+      <btn data-inject="BTN" id="Right" active="low" pin-on="cpu.A1" bind-key="ArrowRight"></btn>
+      <btn data-inject="BTN" id="A" active="low" pin-on="cpu.7" bind-key="KeyZ,KeyA,ControlLeft"></btn>
+      <btn data-inject="BTN" id="B" active="low" pin-on="cpu.8" bind-key="KeyB,KeyS,KeyX,AltLeft,AltRight"></btn>
+
+      <btn click-call="powerOff" id="PWR"></btn>
+      <btn click-toggle="#simContainer@class=microcard;#simContainer img@src=mc.png" click-call="microcardMode" id="MCM"></btn>
+      <btn click-toggle="#ideContainer@hidden=false" id="DBG"></btn>
+      
+    </div>
+    
+  </div>
+
 </div>
