breakpoints and stepping

--- a/res/layouts/Sim.html
+++ b/res/layouts/Sim.html
@@ -9,7 +9,7 @@
       <button click-toggle="#ideContainer@data-tab=history" click-call="refreshHistory">Log</button>
       <button click-toggle="#ideContainer@data-tab=state" click-call="refreshState">CPU</button>
       <div class="expand"> </div>
-      <button click-call="reqResume">&#10148;</button>
+      <button click-call="reqResume" title="resume (F8)">&#10148;</button>
       <button click-call="reqStep" title="step (F6)">&#8628;</button>
     </div>
 
