--- a/res/layouts/Env.html
+++ b/res/layouts/Env.html
@@ -9,7 +9,7 @@
     <h2>A bit less broken. But try it anyway!</h2>
     
     <ul class="market" data-src="app.repo">
-      <li data-url="{{value.binaries.0.filename}}" style="background-image: url({{value.screenshots.0.filename}})" click-call="play">
+      <li data-url="{{value.binaries.0.filename}}" data-source="{{value.sourceUrl}}" style="background-image: url({{value.screenshots.0.filename}})" click-call="play">
 	<span class="gameName" data-name="{{value.title}}"></span>
 	<a href="{{value.sourceUrl}}" class="authorName" data-author="{{value.author}}"></a>
       </li>
