new game button

--- a/res/layouts/Env.html
+++ b/res/layouts/Env.html
@@ -7,7 +7,7 @@
     
     <h1>ProjectABE - 0.3.4</h1>
     <h2>A bit less broken. But try it anyway!</h2>
-    
+    <a class="newProject" href="?url=new">New Game</a>
     <ul class="market" data-src="app.repo">
       <li data-url="{{value.binaries.0.filename}}" data-source="{{value.sourceUrl}}" style="background-image: url({{value.screenshots.0.filename}})" click-call="play">
 	<span class="gameName" data-name="{{value.title}}"></span>
