--- a/res/layouts/Env.html
+++ b/res/layouts/Env.html
@@ -5,8 +5,8 @@
 
   <div>
     
-    <h1>ProjectABE - 0.3.4</h1>
-    <h2>A bit less broken. But try it anyway!</h2>
+    <h1>ProjectABE - 0.4.5</h1>
+    <h2>Hey, it's not that bad! Try it!</h2>
     <a class="newProject" href="?url=new">New Game</a>
     <ul class="market" data-src="app.repo">
       <li data-url="{{value.binaries.0.filename}}" data-source="{{value.sourceUrl}}" style="background-image: url({{value.screenshots.0.filename}})" click-call="play">
