--- a/layouts/Sim.html
+++ b/layouts/Sim.html
@@ -28,7 +28,7 @@
 	</label>
 	<button click-call="compile" id="compile" title="Ctrl+Enter">Build</button>
       </div>
-      <div id="ace"></div>
+      <div id="ace" change-call="commit"></div>
     </div>
     
     <div class="verticalContainer" id="historyContainer">
