--- a/res/style.css
+++ b/res/style.css
@@ -478,6 +478,14 @@ canvas:-webkit-full-screen {
     align-items: center;    
 }
 
+.tabs button {
+    border: none;
+    background: #ABC;
+    color: #234;
+    padding: 2px;
+    margin: 2px;
+}
+
 #simContainer.microcard {}
 
 #simContainer.microcard img {
@@ -575,10 +583,6 @@ canvas:-webkit-full-screen {
     color: #123;
 }
 
-#compile {
-    margin-left: auto;
-}
-
 .dbgbtn {
     background: #AEF;
     border: 0;
@@ -674,4 +678,12 @@ canvas:-webkit-full-screen {
     border-radius: 20px 0px 0px 20px; 
     box-shadow: 0px 0px 1px 1px yellow inset; 
 } 
+
+#compile {
+    margin-left: auto;
+}
+
+#addNewFile {
+    margin-right: 15px;
+}
 
