Added Download button

--- a/res/layouts/Sim.html
+++ b/res/layouts/Sim.html
@@ -33,6 +33,7 @@
 	<button click-call="renameFile" id="rename" title="Rename current file">Rename</button>
 	<button click-call="deleteFile" id="delete" title="Delete current file">Delete</button>
 	<button click-call="compile" id="compile" title="Ctrl+Enter">Build</button>
+	<button click-call="zip" title="Download source zip">Download</button>
       </div>
       <div id="ace" change-call="commit"></div>
     </div>
