optimize code generation for mobiles

--- a/res/style.css
+++ b/res/style.css
@@ -230,11 +230,20 @@ nav button {
     right: 0;
     top: 0;
     bottom: 0;
-    user-select: none;
+
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;    
 }
 
 #simContainer>*{
     user-select: none;
+
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;    
 }
 
 #simContainer img{
