--- a/style.css
+++ b/style.css
@@ -230,11 +230,20 @@ nav button {
     right: 0;
     top: 0;
     bottom: 0;
-    user-select: none;
+
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;    
 }
 
 #simContainer>*{
     user-select: none;
+
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;    
 }
 
 #simContainer img{
@@ -478,6 +487,14 @@ canvas:-webkit-full-screen {
     align-items: center;    
 }
 
+.tabs button {
+    border: none;
+    background: #ABC;
+    color: #234;
+    padding: 2px;
+    margin: 2px;
+}
+
 #simContainer.microcard {}
 
 #simContainer.microcard img {
@@ -575,10 +592,6 @@ canvas:-webkit-full-screen {
     color: #123;
 }
 
-#compile {
-    margin-left: auto;
-}
-
 .dbgbtn {
     background: #AEF;
     border: 0;
@@ -674,4 +687,12 @@ canvas:-webkit-full-screen {
     border-radius: 20px 0px 0px 20px; 
     box-shadow: 0px 0px 1px 1px yellow inset; 
 } 
+
+#compile {
+    margin-left: auto;
+}
+
+#addNewFile {
+    margin-right: 15px;
+}
 
