fix can't leave microcard mode bug

--- a/res/layouts/Sim.html
+++ b/res/layouts/Sim.html
@@ -108,6 +108,7 @@
 
       <btn click-call="powerOff" id="PWR"></btn>
       <btn click-toggle="#simContainer@class=microcard;#simContainer img@src=mc.png" click-call="microcardMode" id="MCM"></btn>
+      <btn click-toggle="#simContainer@class=arduboy;#simContainer img@src=Arduboy (0).png" click-call="arduboyMode" id="ABM"></btn>
       <btn click-toggle="#ideContainer@hidden=false" id="DBG"></btn>
       <btn click-call="reset" id="RESET"></btn>
       
