--- a/layouts/Sim.html
+++ b/layouts/Sim.html
@@ -57,6 +57,7 @@
 	<button click-call="zip" title="Download source zip">Download</button>
       </div>
       <div id="ace" change-call="commit"></div>
+      <div id="codeToolTip"></div>
     </div>
     
     <div class="verticalContainer" id="historyContainer">
