--- a/style.css
+++ b/style.css
@@ -758,3 +758,32 @@ canvas:-webkit-full-screen {
     overflow: auto;
     border: solid 1px #567;
 }
+
+#codeToolTip {
+	background-color: #FFF;
+	background-image: -webkit-linear-gradient(top, transparent, rgba(0, 0, 0, 0.1));
+	background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.1));
+	border: 1px solid gray;
+	border-radius: 1px;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+	color: black;
+	max-width: 100%;
+	padding: 3px 4px;
+	position: absolute;
+	z-index: 999999;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	cursor: default;
+	white-space: pre;
+	word-wrap: break-word;
+	line-height: normal;
+	font-style: normal;
+	font-weight: normal;
+	letter-spacing: normal;
+	pointer-events: none;
+}
+
+#codeToolTip:after {
+    content: attr(data-text);
+}
